Revision history for Perl module TestRail::API

0.012 2014-12-?? TEODESIAN
    - DZIL tidying
    - Improve safety of constructor, try to die with helpful messages as soon as possible
    - Add class usage checks and test for that as author tests

0.011 2014-12-04 TEODESIAN
    - Converted to using dzil, and testing using TestingMania
    - Fixed spelling errors thanks to more extensive testing so enabled
    - Started signing the module

0.010 2014-12-03 TEODESIAN
    - Dist name was being set to TestRail::API instead of TestRail-API
    - Reformatted this file as per CPAN::Changes::Spec
    - Added "use 5.010" to the module, to match min perl in metadata
    - Made URL in SEE ALSO a hyperlink with L<...>
    - Added link to github repo in pod

0.009 2014-11-28 TEODESIAN
    - Oops, forgot my Test deps

0.008 2014-11-28 TEODESIAN
    - Explicitly include Types::Serialiser, correct some POD issues

0.007 2014-08-17 TEODESIAN
    - 0.002 to this release: More or less the pursuit of Kwalitee

0.001 2014-07-25 TEODESIAN
    - First release to CPAN
